--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
         <h1>Pokemon HealthCenter</h1>
         </header>
         <div class="cards">
-            <!-- <div class="card">
+            <div class="card">
                 <div class="card-header">
                     <div class="card-img"></div>
                 </div>
                 <div class="card-body">
                     <h2 class="card-title">Billy</h2>
+                    <div class="health-bar">
+                        <div class="current-health-bar"></div>
+                    </div>
                     <button class="card-button">Adopt Now</button>
                 </div>
-            </div> -->
+            </div>
         </div>
         <button class="card-button healAll" type="submit">Heal all pokemons</button>
         <script src="index.js"></script>
